--- a/NetCoreCMS.Web/Views/Home/RestartHost.cshtml
+++ b/NetCoreCMS.Web/Views/Home/RestartHost.cshtml
@@ -50,6 +50,7 @@
             <h1>NetCoreCMS is Restarting</h1>
             <hr />
             <h2>Please wait</h2> 
+            <a href="/">Home</a>
         </div>       
         
     </div>
