--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -66,7 +66,7 @@
                         {
                             <a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a><span> | </span>
                             <a asp-area="" asp-controller="ManageAccount" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a><span> | </span>
-                            <a asp-area="" asp-controller="Admin" asp-action="Logout">Log out</a>
+                            <a asp-area="" asp-controller="Account" asp-action="Logout">Log out</a>
                         }
                         else
                         {
