Start working on media

--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -121,8 +121,8 @@
                         <li>
                             <a href="#"><i class="fa fa-image fa-fw"></i> Media<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
-                                <li><a href="#"><i class="fa fa-pencil-square-o fa-fw"></i> Create</a></li>
-                                <li><a href="#"><i class="fa fa-th-list fa-fw"></i> Manage</a></li>
+                                <li><a asp-controller="CmsMedia" asp-action="Upload"><i class="fa fa-pencil-square-o fa-fw"></i> Upload</a></li>
+                                <li><a asp-controller="CmsMedia" asp-action="Index"><i class="fa fa-th-list fa-fw"></i> Manage</a></li>
                             </ul>
                         </li>
                         <li>
