Working on notice module.

--- a/NetCoreCMS.Web/Modules/NetCoreCMS.Notice/Views/NoticeHome/Index.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.Notice/Views/NoticeHome/Index.cshtml
@@ -1,3 +1,6 @@
-﻿<h1> Holaaaaaaaaa !!! It's a sample notice module</h1>
+﻿@{ 
+    Layout = Constants.SiteLayoutName;
+}
+<h1> Holaaaaaaaaa !!! It's a sample notice module</h1>
 
 <hr/>
