--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -146,8 +146,8 @@
                                 <li><a asp-controller="Admin" asp-action="Settings"><i class="fa fa-gear fa-fw"></i> General</a></li>
                                 <li><a href="#"><i class="fa fa-user fa-fw"></i> Profile</a></li>
                             </ul>
-                        </li>
-                        
+                        </li> 
+                        @Html.Raw(AdminMenuHelper.ModulesAdminMenuHtml()); 
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
