--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMedia/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMedia/Index.cshtml
@@ -1,9 +1,13 @@
 ﻿@using NetCoreCMS.Framework.Utility
 @using System.Collections
+
+@model List<NccMediaViewModel>
+
 @{
     Layout = Constants.AdminLayoutName;
     ViewData["PageTitle"] = "Media Gallary";
     ViewData["PageSubtitle"] = "Manage existing media";
+    var i = 0;
 }
 
 
@@ -15,8 +19,103 @@
                 <div class="pull-right"><a asp-controller="CmsMedia" asp-action="Upload" class="btn btn-outline btn-primary btn-xs">Upload</a></div>
             </div>
             <div class="panel-body">
-                    
+                @*<table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Sl</th>
+                            <th>File Name</th>
+                            <th>Size</th>
+                            <th>Description</th>
+                            <th>Creation Time</th>
+                            <th>Full Path</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            i = i + 1;
+                            <tr>
+                                <td>@i</td>
+                                <td>
+                                    @if (item.IsDir == true)
+                                    {
+                                        <a asp-controller="CmsMedia" asp-action="Index" asp-route-sq="@item.FullPath">@item.FileName</a>
+                                    }
+                                    else
+                                    {
+                                        <a href="@item.FullPath" target="_blank">@item.FileName</a>
+                                    }
+                                </td>
+                                <td>@item.ItemSize</td>
+                                <td>
+                                    @if (item.IsDir == true)
+                                    {
+                                        @if (item.TotalSubDir > 0)
+                                        {
+                                            <span>Dir(@item.TotalSubDir)&nbsp;</span>
+                                        }
+                                        @if (item.TotalFile > 0)
+                                        {
+                                            <span>Image(@item.TotalFile) </span>
+                                        }
+                                    }
+                                    else
+                                    {
+
+                                    }
+                                </td>
+                                <td>@item.CreationTime.ToString("yyyy-MM-dd hh:mm tt")</td>
+                                <td>@item.FullPath</td>
+                                <td>
+                                <a asp-controller="CmsPage" asp-action="Index" asp-route-slug="@item.Slug" target="_blank">View</a> |
+                                <a asp-controller="CmsPage" asp-action="CreateEdit" asp-route-id="@item.Id">Edit</a> |
+                                <a asp-controller="CmsPage" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>*@
+
+                @foreach (var item in Model)
+                {
+                    if (item.IsDir)
+                    {
+                        <a asp-controller="CmsMedia" asp-action="Index" asp-route-sq="@item.FullPath">
+                            <div style="float:left; margin:5px;padding:5px; width:200px; height:200px; text-align:center; border:1px solid; overflow:hidden; display:table;">
+                                <span style="vertical-align:middle;  display: table-cell;">
+                                    <strong>@item.FileName</strong> <br />
+                                    @if (item.TotalSubDir > 0)
+                                    {
+                                        <span>Dir(@item.TotalSubDir)</span><br />
+                                    }
+                                    @if (item.TotalFile > 0)
+                                    {
+                                        <span>Image(@item.TotalFile) </span>
+                                    }
+                                </span>
+                            </div>
+                        </a>
+                    }
+                    else
+                    {
+
+                        <div style="float:left; margin:5px;padding:5px; width:200px; height:200px; text-align:center; border:1px solid; overflow:hidden;">
+                            <a href="@item.FullPath" target="_blank">
+                                <img src="@item.FullPath" width="188px" height="120px" />
+                                @item.FileName (@item.ItemSize)<br />
+                            </a>
+                            <span>Ct: @item.CreationTime.ToString("yyyy-MM-dd hh:mm tt")</span>
+                            <hr style="padding:2px;margin:1px;" />                            
+                            <a asp-controller="CmsMedia" asp-action="Rename" asp-route-sq="@item.FullPath" class="btn btn-xs btn-outline btn-primary">Rename</a>
+                            <a asp-controller="CmsMedia" asp-action="Delete" asp-route-sq="@item.FullPath" class="btn btn-xs btn-outline btn-danger">Delete</a>
+                        </div>
+
+                    }
+                }
             </div>
+
+
+
             <!-- /.panel-body -->
         </div>
         <!-- /.panel -->
